pycchdo/static/css/static.css
.pgp h2,
.formats-exchange-format-descr h2,
.crypt h2 {
  font-size: 1.2em;
}

.boxed p {
  margin-bottom: 0.5em;
}
.boxed.contact p {
  margin-bottom: 0;
}

.formats-exchange-format-descr li,
.website-guide li {
  margin-left: 2em;
  list-style-type: disc;
}

.contact .vcard {
  margin-bottom: 1em;
}
.contact .vcard h2 {
  font-size: 1.3em;
}
.contact .vcard .adr {
  line-height: 1.1em;
  padding: 0.4em 0;
}
.contact .vcard .tel .value,
.contact .vcard.cchdo .email {
  padding-left: 0.5em;
}
.contact .people {
  width: 50em;
}
.contact .people .vcard {
  float: left;
  width: 25em;
}
.contact .vcard h3 {
  font-size: 1.2em;
  margin-bottom: 0.2em;
}

.sumfile-example pre {
  margin: 1em 0;
}
.sumfile-example td,
.sumfile-example th {
  vertical-align: top;
  padding: 0.25em;
}
.sumfile-example th {
  font-weight: bold;
  text-decoration: underline;
}
.sumfile-example .top-header th {
  text-decoration: none;
}
.sumfile-example .fortran {
  font-weight: bold;
  white-space: nowrap;
}
.sumfile-example p.subposition {
  font-weight: normal;
  text-decoration: none;
  font-style: italic;
}
.sumfile-example #nav-sys-codes {
  margin: 0.5em 0;
}
.sumfile-example #nav-sys-codes h3 {
  font-weight: bold;
  text-decoration: underline;
}
.sumfile-example #nav-sys-codes th {
  padding-right: 0.5em;
  text-decoration: none;
}

.version-policy #version-number {
  font-weight: bold;
  line-height: 3em;
}
.version-policy #explanation {
  margin: 1em 0;
}
.version-policy #explanation th {
  font-weight: bold;
}
.version-policy #explanation th,
.version-policy #explanation td {
  padding: 0 0.25em;
}

.data-sharing-policy h2 {
  font-size: 1.2em;
  font-weight: bold;
  text-align: center;
}
.data-sharing-policy p {
  margin-bottom: 1em;
}
.data-sharing-policy p:first-letter {
  padding-left: 1em;
}
.data-sharing-policy ol p:first-letter {
  padding-left: 0;
}
.data-sharing-policy ol li {
  margin-left: 2em;
  list-style-type: decimal;
}

.file-name-conv h2 {
  font-weight: bold;
  text-decoration: underline;
  margin: 1em 0 0.5em 0;
}
.file-name-conv table {
  margin: 0.5em 0;
}
.file-name-conv th {
  width: 10em;
}
.file-name-conv td,
.file-name-conv code {
  font-size: 1em;
  font-family: Andale Mono, Courier New, Courier, Fixed, monospace;
}
.file-name-conv th,
.file-name-conv td {
  padding: 0 0.5em;
}
.file-name-conv .empty {
  height: 0.5em;
}

.manuals-index h2 {
  font-size: 1.3em;
  margin-top: 1em;
}
.manuals-index h3 {
  font-size: 1.2em;
  margin-top: 0.75em;
}
.manuals-index #requirements-for-reporting a {
  display: inline-block;
  width: 7em;
}
.manuals-index .title {
  font-weight: bold;
}
.manuals-index p.credit {
  margin-left: 1em;
}
.manuals-index .pdf {
  margin-top: 1em;
  border-top: 1px solid #AAAAAA;
  text-align: center;
}

.by-ocean .box_content {
  padding-top: 0;
}
.by-ocean h2 {
  font-size: 1.3em;
  margin-top: 1em;
}
.by-ocean h3 {
  font-size: 1.2em;
  margin-top: 0.75em;
}
.by-ocean p {
  font-size: 0.9em;
}
.by-ocean ol li {
  display: inline;
  padding-right: 1em;
}
.by-ocean ol li.break {
  display: block;
}
.by-ocean .subsection {
  clear: left;
}
.by-ocean .mapimg {
  float: left;
  margin-right: 1em;
}

.abbreviations tr.header {
  border-bottom: 1px solid #EEEEEE;
}
.abbreviations th {
  font-size: 1.2em;
  padding-top: 1em;
}
.abbreviations .first th {
  padding-top: 0;
}
.abbreviations td {
  vertical-align: top;
}
.abbreviations dd {
  margin-left: 0.5em;
  font-size: 0.95em;
}

.website-guide h2 {
  color: #006F89;
  font-size: 1.2em;
  margin-bottom: 0.2em;
}
.website-guide .figure {
  border: 1px solid #EEEEEE;
  padding: 1em;
  margin: 0.5em;
  clear: right;
  float: right;
  width: 15em;
}

.meter-map table {
  width: 100%;
}
.meter-map .header th {
  font-size: 1.2em;
}
.meter-map th.current_meter {
  background: #EEEEEE;
}
.meter-map th,
.meter-map td {
  padding: 0.5em;
}

.formats-exchange-example-bottle div.preformatted {
  width: 100%;
}
.formats-exchange-example-bottle td {
  white-space: nowrap;
}
.formats-exchange-example-bottle .data td {
  text-align: right;
}

.give h2#seahunt {
  font-size: 1.2em;
  margin: 0.2em 0;
}
.boxed.get ul li,
.give ul.seahunt li {
  list-style: disc;
  margin-left: 2em;
}

.boxed.get .first {
  margin-top: -1em;
}
.boxed.get h2 {
  font-size: 1.2em;
}
.boxed.get #search_map_ad,
.boxed.get #basin_selector_map {
  margin: 0.5em;
}
.boxed.get ul {
  margin-bottom: 0.5em;
}

